Fixed headers and menu on small devices

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -344,11 +344,11 @@ nav.menu li {
   padding: 0;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 662px) {
-  nav.menu li {
-    display: block;
-  }
-}
+// @media only screen and (min-width: 320px) and (max-width: 662px) {
+//   nav.menu li {
+//     display: block;
+//   }
+// }
 nav.pagination li:first-child {
   margin-left: 0;
   margin-right: 0;
@@ -464,6 +464,14 @@ table tfoot {
   }
   .page-number {
     display: block;
+  }
+  h1.blog-title {
+    font-size: 36px;
+    margin-top: 60px;
+  }
+  h1.blog-subtitle {
+    font-size: 16px;
+    margin-bottom: 65px;
   }
 }
 
